--- a/registration-style.css
+++ b/registration-style.css
@@ -111,7 +111,8 @@ body{
     color: #e0d9d2;
     font-size: 15px;
     transition: background-color 0.3s ease;
-
+    margin-top: 70px;
+    margin-left: -15px;
 }
 
 .submit-button input[type="submit"]:hover{
